--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -35,7 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.2
   firebase_core: ^2.24.2
+  firebase_auth: ^4.15.2
+  firebase_storage: ^11.5.5
+  image_picker: ^1.0.4
+  cloud_firestore: ^4.13.5
+  firebase_messaging: ^14.7.8
 
 dev_dependencies:
   flutter_test:
